src/app-groups/elk/apps/elastic-fetcher/templates/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-fetcher
  labels:
    app: elastic-fetcher-label
    service: elastic-fetcher
spec:
  type: NodePort
  selector:
    app: elastic-fetcher-label
    service: elastic-fetcher
  ports:
    - name: http
      protocol: TCP
      port: 1111
      targetPort: 8080
